--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,140 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.button-switch {
+  margin: 0.5rem;
+  padding-right: 0.5rem;
+  padding-left: 0.5rem;
+  padding: 0.25rem;
+  border-radius: 1rem;
+  font-weight: bold;
+  width: 100%;
+  max-width: 100px;
+  color: white;
+  border-color: gray;
+  transition: background-color 0.3s, color 0.3s;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.button-switch-active {
+  background-color: #E5AB4F;
+  color: white;
 }
+
+.button-switch-inactive {
+  color: #E5AB4F;
+  border: none;
+}
+
+
+.button-simple {
+  
+  padding: 4px 12px 4px 12px;
+  margin: 0.5rem;
+  color: #E5AB4F;
+  font-weight: bold;
+  background-color: rgba(10, 4, 0, 0.7);
+  border: 1px solid rgba(241, 193, 1, 0.562);
+  border-radius: 1rem;
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.button-simple:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 10px rgba(241, 193, 1, 0.562);
+}
+
+.button-simple:active {
+  transform: scale(0.95);
+}
+
+
+.glow {
+  font-size: 20px;
+  color: #fff;
+  text-align: center;  
+  -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@-webkit-keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ffd700, 0 0 40px #ffd700, 0 0 50px #ffd700, 0 0 60px #ffd700, 0 0 70px #ffd700;
+  }
+  to {
+    text-shadow: 0 0 20px #fff, 0 0 30px #ffff00, 0 0 40px #ffff00, 0 0 50px #ffff00, 0 0 60px #ffff00, 0 0 70px #ffff00, 0 0 80px #ffff00;
+  }
+}
+
+
+@keyframes slideInFromLeft {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+.slide-in-left {
+  animation: slideInFromLeft 1s ease-out forwards;
+}
+
+
+
+
+.animation-delay-200 {
+  animation-delay: 0.2s;
+}
+
+.animation-delay-400 {
+  animation-delay: 0.4s;
+}
+
+.animation-delay-600 {
+  animation-delay: 0.6s;
+}
+
+.btn-try {
+    position: relative;
+    font-family: 'Heebo', sans-serif;
+    padding: 12px 40px;
+    border: 0;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 1em;
+    border-radius: 32px;
+    overflow: hidden;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    box-shadow: inset 0px 0px 4px white;
+
+  }
+  
+  .btn-try:hover {
+    text-shadow: 0px 5px 10px #f1c1018f;
+    transform: scale(1.01);
+    box-shadow: inset 0px 0px 10px #f1c1018f;
+    color: rgba(241, 193, 1, 0.562);
+
+  }
+  
+  .btn-try::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100px;
+    width: 50%;
+    height: 100%;
+    transform: rotate(80deg);
+    background: #ffffff77;
+    filter: blur(10px);
+    transition: 0.6s ease-in-out;
+  }
+  
+  .btn-try:hover::after {
+    left: 100%;
+  }
